// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="c7n-radio-wrapper"
>
  <span
    class="c7n-radio"
  >
    <input
      class="c7n-radio-input"
      type="radio"
    />
    <span
      class="c7n-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disable.md correctly 1`] = `
<div>
  <label
    class="c7n-radio-wrapper c7n-radio-wrapper-disabled"
  >
    <span
      class="c7n-radio c7n-radio-disabled"
    >
      <input
        class="c7n-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="c7n-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br />
  <label
    class="c7n-radio-wrapper c7n-radio-wrapper-disabled"
  >
    <span
      class="c7n-radio c7n-radio-checked c7n-radio-disabled"
    >
      <input
        checked=""
        class="c7n-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="c7n-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style="margin-top:20px"
  >
    <button
      class="c7n-btn c7n-btn-primary c7n-btn-flat"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
<div>
  <div>
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-disabled"
        >
          <span
            class="c7n-radio-button c7n-radio-button-disabled"
          >
            <input
              class="c7n-radio-button-input"
              disabled=""
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked c7n-radio-button-wrapper-disabled"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked c7n-radio-button-disabled"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              disabled=""
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-disabled"
        >
          <span
            class="c7n-radio-button c7n-radio-button-disabled"
          >
            <input
              class="c7n-radio-button-input"
              disabled=""
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-disabled"
        >
          <span
            class="c7n-radio-button c7n-radio-button-disabled"
          >
            <input
              class="c7n-radio-button-input"
              disabled=""
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-disabled"
        >
          <span
            class="c7n-radio-button c7n-radio-button-disabled"
          >
            <input
              class="c7n-radio-button-input"
              disabled=""
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="c7n-radio-group-wrapper c7n-radio-group-has-label"
>
  <span
    class="c7n-radio-group-label label-disabled"
  >
    这是一个label
  </span>
  <div
    class="c7n-radio-group"
  >
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-checked c7n-radio-wrapper-disabled"
    >
      <span
        class="c7n-radio c7n-radio-checked c7n-radio-disabled"
      >
        <input
          checked=""
          class="c7n-radio-input"
          disabled=""
          type="radio"
          value="1"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-disabled"
    >
      <span
        class="c7n-radio c7n-radio-disabled"
      >
        <input
          class="c7n-radio-input"
          disabled=""
          type="radio"
          value="2"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-disabled"
    >
      <span
        class="c7n-radio c7n-radio-disabled"
      >
        <input
          class="c7n-radio-input"
          disabled=""
          type="radio"
          value="3"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-disabled"
    >
      <span
        class="c7n-radio c7n-radio-disabled"
      >
        <input
          class="c7n-radio-input"
          disabled=""
          type="radio"
          value="4"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="c7n-radio-group-wrapper"
>
  <div
    class="c7n-radio-group"
  >
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-checked"
      style="display:block;height:30px;line-height:30px"
    >
      <span
        class="c7n-radio c7n-radio-checked"
      >
        <input
          checked=""
          class="c7n-radio-input"
          type="radio"
          value="1"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        Option A
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
      style="display:block;height:30px;line-height:30px"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        Option B
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
      style="display:block;height:30px;line-height:30px"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        Option C
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
      style="display:block;height:30px;line-height:30px"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        More...
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
<div>
  <div
    class="c7n-radio-group-wrapper"
  >
    <div
      class="c7n-radio-group"
    >
      <label
        class="c7n-radio-wrapper c7n-radio-wrapper-checked"
      >
        <span
          class="c7n-radio c7n-radio-checked"
        >
          <input
            checked=""
            class="c7n-radio-input"
            type="radio"
            value="Apple"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Apple
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Pear"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Pear
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Orange"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>
  <div
    class="c7n-radio-group-wrapper"
  >
    <div
      class="c7n-radio-group"
    >
      <label
        class="c7n-radio-wrapper c7n-radio-wrapper-checked"
      >
        <span
          class="c7n-radio c7n-radio-checked"
        >
          <input
            checked=""
            class="c7n-radio-input"
            type="radio"
            value="Apple"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Apple
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Pear"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Pear
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Orange"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>
  <div
    class="c7n-radio-group-wrapper"
  >
    <div
      class="c7n-radio-group"
    >
      <label
        class="c7n-radio-wrapper c7n-radio-wrapper-checked"
      >
        <span
          class="c7n-radio c7n-radio-checked"
        >
          <input
            checked=""
            class="c7n-radio-input"
            type="radio"
            value="Apple"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Apple
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Pear"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Pear
        </span>
      </label>
      <label
        class="c7n-radio-wrapper"
      >
        <span
          class="c7n-radio"
        >
          <input
            class="c7n-radio-input"
            type="radio"
            value="Orange"
          />
          <span
            class="c7n-radio-inner"
          />
        </span>
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="c7n-radio-group-wrapper"
>
  <div
    class="c7n-radio-group"
  >
    <label
      class="c7n-radio-wrapper c7n-radio-wrapper-checked"
    >
      <span
        class="c7n-radio c7n-radio-checked"
      >
        <input
          checked=""
          class="c7n-radio-input"
          name="radiogroup"
          type="radio"
          value="1"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          name="radiogroup"
          type="radio"
          value="2"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          name="radiogroup"
          type="radio"
          value="3"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="c7n-radio-wrapper"
    >
      <span
        class="c7n-radio"
      >
        <input
          class="c7n-radio-input"
          name="radiogroup"
          type="radio"
          value="4"
        />
        <span
          class="c7n-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
<div>
  <div>
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group c7n-radio-group-large"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="c7n-radio-group-wrapper"
    >
      <div
        class="c7n-radio-group c7n-radio-group-small"
      >
        <label
          class="c7n-radio-button-wrapper c7n-radio-button-wrapper-checked"
        >
          <span
            class="c7n-radio-button c7n-radio-button-checked"
          >
            <input
              checked=""
              class="c7n-radio-button-input"
              type="radio"
              value="a"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Hangzhou
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="b"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Shanghai
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="c"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Beijing
          </span>
        </label>
        <label
          class="c7n-radio-button-wrapper"
        >
          <span
            class="c7n-radio-button"
          >
            <input
              class="c7n-radio-button-input"
              type="radio"
              value="d"
            />
            <span
              class="c7n-radio-button-inner"
            />
          </span>
          <span>
            Chengdu
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
